37) Rework switch init code. More correct and speedup.<br>
38) Blink sec+wps led at boot before start goahead.<br>
39) Asinc blink wps/sec led if goahead not found.<br>
40) Update rw_init bin files for RT3x5x and add images for new chips.<br>
41) Fix some fields enable/disable in skb.<br>
42) Add init script for transmission daemon.<br>
43) Libcurl update to 7.21.7 version.<br>
44) Small kernel code arp fixups.<br>
45) Update ralink apps.<br>
46) Support new igmp snooping version in igmpproxy.<br>
47) Add variable igmpSnoopMode. Values=n/f or NULL (default NULL=auto, n=none/disabled,f=force enabled. Need add WebUI).<br>
48) Fix some leasks and more safe libnvram.<br>
49) Igmpproxy code sync with upstream git.<br>
50) Fix build at some distro.<br>
51) Fix dirty inode set in fs subsystem.<br>
52) Add support volume_id for vfat filesystem.<br>
53) Hide 802G/N mode for ethernet converter(STA driver not support this mode correct).<br>
54) Remove some debug messages from web and set auto redirect at apply push.<br>
55) Rework wifi/wan/lan reinit in internet.sh. More correct for MBSSID mode.<br>
56) Fix wds reconfigure and operationMode adjustment.<br>
57) Video turbine MSC extended mode enabled for wifi.(AP/STA mode. variable VideoTurbine 0/1 default 1. need add in webUI)<br>
58) Update wsc_upnp to 0.2.2 version from 3.6.0.0 SDK.<br>
59) Fix dns static and relay disabled mode.<br>
60) Small fix double vlan tag.<br>
61) Uboot add disable/enable erase command to menuconfig.<br>
62) More checks data in dhcpd configure script.<br>
63) Goahead: fix some services restart.<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://sadnet.ru">sadnet.ru - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>